# Twinning

./: .editorconfig  .gitattributes  .gitignore  BUILD.py  DISTRIBUTE.py  README.md  build.py  test.py
Assistant/windows/forwarder/: CMakeLists.txt  common.hpp  forwarder_explorer_command.cppm  forwarder_explorer_command.hpp  library.cpp  library.def  main.cpp  resource.rc
Core/: CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  launch.vs.json  xmake.lua
Core/build_script/: build.ps1  build_preset.ps1
Core/cmake/: compile_option.cmake  compile_warning.cmake  compile_warning_disable.cmake  condition.cmake  condition_definition.cmake  import_root.cmake  import_vld.cmake  setting.cmake
Core/core/: CMakeLists.txt  base_type.hpp  common.hpp  macro.hpp  type.hpp  version.hpp  xmake.lua
Core/core/executor/: api.hpp  callback.hpp  context.hpp  executor.hpp  interface.hpp  shell_callback.hpp
Core/core/interface/: implement.hpp  interface.cpp  interface.hpp
Core/core/third/: ETCPACK.hpp  PVRTCCompressor.hpp  Rijndael.hpp  avir.hpp  bzip2.hpp  etcpak.hpp  fmt.hpp  libpng.hpp  lzma.hpp  md5.hpp  mscharconv.hpp  open_vcdiff.hpp  quickjs.hpp  rg_etc1.hpp  tinyxml2.hpp  zlib.hpp
Core/core/third/system/: posix.hpp  windows.hpp
Core/core/tool/common/: byte_stream.hpp  image.hpp  protocol_buffer_variable_length_integer.hpp  version_utility.hpp  wave_structure.hpp
Core/core/tool/data/compress/: bzip2.hpp  deflate.hpp  lzma.hpp
Core/core/tool/data/compression/: bzip2.hpp  deflate.hpp  lzma.hpp
Core/core/tool/data/differentiation/: vcdiff.hpp
Core/core/tool/data/encode/: base64.hpp
Core/core/tool/data/encoding/: base64.hpp
Core/core/tool/data/encrypt/: rijndael.hpp  xor.hpp
Core/core/tool/data/encryption/: rijndael.hpp  xor.hpp
Core/core/tool/data/hash/: fnv.hpp  md5.hpp
Core/core/tool/data/serialization/: json.hpp  xml.hpp
Core/core/tool/image/file/: png.hpp
Core/core/tool/image/texture/: encode.hpp
Core/core/tool/image/transformation/: transform.hpp
Core/core/tool/marmalade/dzip/: common.hpp  definition.hpp  manifest.hpp  pack.hpp  structure.hpp  unpack.hpp  version.hpp
Core/core/tool/misc/pvz1_rsb_texture_20_series_layout/: encode.hpp
Core/core/tool/misc/pvz2_chs_rsb_texture_alpha_index/: encode.hpp
Core/core/tool/miscellaneous/pvz1_rsb_texture_20_series_layout/: encode.hpp
Core/core/tool/popcap/animation/: common.hpp  (+5 more)
Core/core/tool/texture/: encode.hpp
Core/core/utility/: builtin.hpp  macro.hpp  null.hpp  utility.hpp
Core/core/utility/base_wrapper/: base.hpp  boolean.hpp  byte.hpp  character.hpp  enumerated.hpp  enumeration.hpp  null_pointer.hpp  number.hpp  pointer.hpp  wrapper.hpp
Core/core/utility/exception/: exception.hpp  simple_exception.hpp  source_location.hpp  special_exception.hpp  utility.hpp
Core/core/utility/file_system/: file_system.hpp  path.hpp
Core/core/utility/image/: basic_bitmap.hpp  basic_bitmap_view.hpp  bitmap.hpp  channel.hpp  color.hpp  image.hpp  image_view.hpp  pixel.hpp  size.hpp  standard.hpp
Core/core/utility/misc/: 2d_type.hpp  allocator.hpp  bitset.hpp  enum.hpp  finalizer.hpp  fourcc.hpp  kv_pair.hpp  math.hpp  number_variant.hpp  padding_block.hpp  string_block.hpp  thread.hpp
Core/core/utility/miscellaneous/: allocator.hpp  bit_set.hpp  bitset.hpp  constant_block.hpp  dimension.hpp  finalizer.hpp  fourcc.hpp  kv_pair.hpp  math.hpp  number_variant.hpp  padding_block.hpp  record.hpp  string_block.hpp  thread.hpp
Core/core/utility/process/: process.hpp
Core/core/utility/range/: algorithm.hpp  number_iterator.hpp  number_range.hpp  range_wrapper.hpp
Core/core/utility/string/: basic_static_string.hpp  basic_string.hpp  basic_string_adapter.hpp  basic_string_view.hpp  encoding.hpp  format.hpp  parser.hpp  string.hpp
Core/core/utility/support/: byte_stream.hpp  character_stream.hpp  fmt.hpp  java_script.hpp  js.hpp  json.hpp  std.hpp  stl.hpp  string.hpp
Core/core/utility/system/: posix.hpp  system.hpp  windows.hpp
Core/core/utility/trait/: base.hpp  builtin.hpp  callable.hpp  category.hpp  enum.hpp  generalization.hpp  object.hpp  range.hpp  template_instance.hpp  trait.hpp
Core/debugger/: CMakeLists.txt  main.cpp  shell
Core/test/: main.cpp  xmake.lua
Core/third/ETCPACK/: _etcpack.hpp  image.h  xmake.lua
Core/third/PVRTCCompressor/: main.cpp  xmake.lua
Core/third/Rijndael/: Rijndael.h  xmake.lua
Core/third/bzip2/: xmake.lua
Core/third/etcpak/: xmake.lua
Core/third/fmt/: xmake.lua
Core/third/libpng/: xmake.lua
Core/third/lzma/: xmake.lua
Core/third/md5/: md5.cpp  md5.h  xmake.lua
Core/third/mscharconv/: xmake.lua
Core/third/open_vcdiff/: xmake.lua
Core/third/quickjs/: quickjs.h  xmake.lua
Core/third/quickjs.c_smile/: xmake.lua
Core/third/rg_etc1/: xmake.lua
Core/third/tinyxml2/: xmake.lua
Core/third/zlib/: xmake.lua
Shell/shell/: CMakeLists.txt  base.hpp  callback.hpp  common.hpp  core_interface.hpp  launch.hpp  link.bat  loader.hpp  main.cpp  main_console.cppm  main_console_bridge_client.cppm  main_console_bridge_client.hpp  version.hpp  xmake.lua
Shell/shell/bridge/: cli_host.hpp  client.cppm  client.hpp  converter.hpp  data.cppm  data.hpp  dynamic_library.hpp  host.hpp  interface.hpp  invoker.hpp  launcher.cppm  launcher.hpp  library.cppm  library.hpp  proxy.cppm  proxy.hpp  service.cppm  service.hpp  static_library.hpp  symbol.hpp
Shell/shell/core/: converter.hpp  dynamic_library.hpp  interface.hpp  invoker.hpp  library.hpp  static_library.hpp  symbol.hpp
Shell/shell/host/: cli_host.hpp  host.hpp  launcher.hpp
Shell/shell/resource/windows/: application.manifest
Shell/shell/third/: tinyfiledialogs.cppm  tinyfiledialogs.hpp
Shell/shell/third/system/: posix.cppm  posix.hpp  windows.cppm  windows.hpp
Shell/shell/utility/: exception.cppm  exception.hpp  function.hpp  interaction.cppm  interaction.hpp  library.cppm  library.hpp  macro.hpp  miscellaneous.cppm  miscellaneous.hpp  string.cppm  string.hpp  system_native_string.cppm
Shell/shell/utility/system/: windows.hpp
Shell/shell/windows/: application.aps  application.manifest
(+2648 files in other folders)
