cmake_minimum_required(VERSION 3.21)

project(TwinKleS.ToolKit.Core)

set(M_root_project_directory ${CMAKE_SOURCE_DIR})

include(${M_root_project_directory}/cmake/setting.cmake)
include(${M_root_project_directory}/cmake/condition.cmake)

add_subdirectory(./third_party/mscharconv)
add_subdirectory(./third_party/fmt)
add_subdirectory(./third_party/tinyxml2)
add_subdirectory(./third_party/md5)
add_subdirectory(./third_party/Rijndael)
add_subdirectory(./third_party/zlib)
add_subdirectory(./third_party/bzip2)
add_subdirectory(./third_party/libpng)
add_subdirectory(./third_party/ETCPACK)
add_subdirectory(./third_party/rg_etc1)
add_subdirectory(./third_party/PVRTCCompressor)
if(M_system_windows OR M_system_linux OR M_system_macos)
	add_subdirectory(./third_party/lzma)
endif()
if(M_system_android OR M_system_ios)
	add_subdirectory(./third_party/lzma.no_hardware)
endif()
if(M_system_linux OR M_system_macos OR M_system_android OR M_system_ios)
	add_subdirectory(./third_party/quickjs)
endif()
if(M_system_windows)
	add_subdirectory(./third_party/quickjs.c_smile)
endif()

add_subdirectory(./core)

if(M_system_windows OR M_system_linux OR M_system_macos)
	add_subdirectory(./debugger)
endif()
